Closed Bug 1096348 Opened 11 years ago Closed 11 years ago

certutil -H -N does not list -f option

Categories

(NSS :: Tools, defect)

3.15.4
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: elio.maldonado.batiz, Assigned: elio.maldonado.batiz)

Details

Attachments

(1 file)

As originally reported by Hubert Kario Description of problem: When I run `certutil -H -N`, the message does not say it is possible to use `-f file` to provide password for the database. Version-Release number of selected component (if applicable): nss-tools-3.15.4-6.el7.x86_64 How reproducible: Always Steps to Reproduce: 1. certutil -H -N The option does work: mkdir /tmp/nssdb echo test > /tmp/test.txt certutil -N -d /tmp/nssdb -f /tmp/test.txt Actual results: -N Create a new certificate database -d certdir Cert database directory (default is ~/.netscape) -P dbprefix Cert & Key database prefix --empty-password use empty password when creating a new database (NSS database created) Expected results: -N Create a new certificate database -d certdir Cert database directory (default is ~/.netscape) -P dbprefix Cert & Key database prefix --empty-password use empty password when creating a new database -f password-file Specify the password file
Assignee: nobody → emaldona
Attachment #8519958 - Flags: review?(ryan.sleevi)
Attachment #8519958 - Flags: review?(ryan.sleevi) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: